k8s/03-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: secure-notes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: api-sa
      containers:
      - name: api
        # Refers to local docker image for testing. In AWS, this would be an ECR URI.
        image: securitydemo-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: secure-notes
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  # SECURITY: Internal ClusterIP. Only the frontend can communicate with the backend.
  type: ClusterIP
